--- a/xaichung.css
+++ b/xaichung.css
@@ -5,7 +5,7 @@ body {
 	padding: 0;
 	font-family: 'Roboto', sans-serif;
 	font-size: 1.2rem;
-	background-color: black;
+	background-color: Champagne;
 }
 footer a:hover {
 				text-decoration:none;
